--- a/_config.yml
+++ b/_config.yml
@@ -70,7 +70,7 @@ github_username: philipportner # your GitHub user name
 gitlab_username: # your GitLab user name
 twitter_username: __phil_o # your Twitter handle
 mastodon_username: # your mastodon instance+username in the format instance.tld/@username
-linkedin_username: # your LinkedIn user name
+linkedin_username: philipp-ortner-5a2330183 # your LinkedIn user name
 telegram_username: # your Telegram user name
 scholar_userid: 6b1TyBgAAAAJ # your Google Scholar ID
 semanticscholar_id: # your Semantic Scholar ID
